[metadata]
name = pya4k
version = 2.5.3
author = bcdev
author_email = bcdev@mail.ru
description = An way to use anime4kcpp in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlackCatDevel0per/pya4k
project_urls =
    Bug Tracker = https://github.com/BlackCatDevel0per/pya4k/issues
classifiers =
    anime
    anime4k
    anime4kcpp
    upscale
    video
    image

[options]
python_requires = >=3.7
package_dir =
    = .
packages = find:
install_requires =
    ffmpeg-python>=0.2.0
    numpy >= 1.17.3

[options.package_data]
* = libac.so

[options.packages.find]
where = .
exclude =
    examples*
    docs*
    tests*
